# MillerInc.GUI-Library

./: .gitignore  CMakeLists.txt
include/: CrossPlatform.h  GUI.h  library.h
include/Window/: Components.h  CustomWindow.h  Window.h
include/Window/Components/: Button.h  Item.h  Label.h
include/Window/Linux/: LinuxComponents.h  LinuxWindow.h
include/Window/Linux/Components/: LinuxButton.h  LinuxLabel.h
include/Window/Windows/: WindowsComponents.h  WindowsWindow.h
include/Window/Windows/Components/: WindowsButton.h  WindowsLabel.h
source/: library.cpp
source/Window/: CustomWindow.cpp  Window.cpp
source/Window/Components/: Button.cpp  Item.cpp  Label.cpp
source/Window/Linux/: LinuxWindow.cpp
source/Window/Linux/Components/: LinuxButton.cpp  LinuxLabel.cpp
source/Window/Windows/: WindowsButton.cpp  WindowsLabel.cpp  WindowsWindow.cpp
